--- a/src/components/BackersSection/BackersSection.scss
+++ b/src/components/BackersSection/BackersSection.scss
@@ -44,7 +44,6 @@
   justify-content: space-between;
   grid-gap: bg-space(1);
   padding: 0 bg-space(1);
-  overflow: hidden;
 
   @include block-with-bg-border;
 
