--- a/src/components/HomeHeroSection/HomeHeroSection.scss
+++ b/src/components/HomeHeroSection/HomeHeroSection.scss
@@ -202,7 +202,6 @@
   display: flex;
   align-items: center;
   padding: 0 to-rem(24);
-  overflow: hidden;
 
   @include block-with-bg-border;
 
